# crabroll

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Embed.toml  README.md  flake.nix  treefmt.nix
.cargo/: config.toml
crabroll/: ARCHITECTURE.md  Cargo.toml  config.toml
crabroll/.cargo/: config.toml
crabroll/src/: main.rs  motor.rs  mqtt.rs  tmc2209.rs  wifi.rs
hardware/: TODO.md  crabroll.kicad_pcb  crabroll.kicad_pro  crabroll.kicad_sch  crabroll.kicad_sym
hardware/Crabroll.pretty/: ESP32c3.kicad_mod  Motor Driver Module.kicad_mod  Two_Pin_Through_Hole_Push_Button.kicad_mod  Voltage Regulator Module.kicad_mod
iter-step-gen/: Cargo.toml  IntLeibRamp.typ  math.typ  works.bib
iter-step-gen/src/: lib.rs
src/: main.rs  stepper.rs  tmc2209.rs
