[package]
edition = "2024"
name = "crabroll"
description = "Stepper motor powered roller blinds that speak MQTT"
license = "TODO"
version = "0.1.0"

[dependencies]
defmt = "1.0"
esp-bootloader-esp-idf = "0.1"
esp-hal = { version = "=1.0.0-rc.0", features = [
  "defmt",
  "esp32c3",
  "unstable",
] }

embassy-net = { version = "0.7", features = [
  "defmt",
  "dhcpv4",
  "tcp",
  "udp",
  "dns",
  "mdns",
  "dhcpv4-hostname",
  "alloc",
  "icmp"
] }
embedded-io = { version = "0.6", features = ["defmt-03"] }
embedded-io-async = { version = "0.6", features = ["defmt-03"] }
esp-alloc = { version = "0.8", features = ["defmt"] }
panic-rtt-target = { version = "0.2", features = ["defmt"] }
critical-section = "1.2"
embassy-executor = { version = "0.7", features = [
  "defmt",
# will be able to get rid of this on version 0.8
  "task-arena-size-98304"
] }
embassy-time = { version = "0.4", features = ["defmt"] }
esp-hal-embassy = { version = "0.9", features = ["defmt", "esp32c3"] }
esp-wifi = { version = "0.15", features = [
  "builtin-scheduler",
  "defmt",
  "esp-alloc",
  "esp32c3",
  "smoltcp",
  "wifi",
] }
static_cell = "2.1"
defmt-rtt = "1.0"
thiserror = { version = "2.0", default-features = false }
bitfield-struct = "0.11"
heapless = { version = "0.8", features = ["defmt-03"] }
rust-mqtt = { version = "0.3", default-features = false, features = ["defmt", "no_std"] }
rand = { version = "0.9", default-features = false, features = ["std_rng"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
