[package]
edition = "2024"
name = "crabroll"
description = "Stepper motor powered roller blinds that speak MQTT"
license = "EUPL-1.2"
version = "0.1.0"
repository = "https://github.com/gabevenberg/crabroll"
readme = "../README.md"
keywords = [
    "iot",
    "home-assistant",
    "embassy",
    "firmware",
    "MQTT",
]
categories = [
    "embedded",
    "no_std",
    "science::robotics",
]

[dependencies]
iter-step-gen = { path = "../iter-step-gen" }
defmt = "1.0"
esp-bootloader-esp-idf = {version = "0.4", features = ["esp32c3"]}
esp-hal = { version = "1.0", features = [
  "defmt",
  "esp32c3",
  "unstable",
] }
embassy-net = { version = "0.8", features = [
  "defmt",
  "dhcpv4",
  "tcp",
  "udp",
  "dns",
  "mdns",
  "dhcpv4-hostname",
  "alloc",
  "icmp"
] }
embedded-io = { version = "0.7", features = ["defmt"] }
embedded-io-async = { version = "0.7", features = ["defmt"]}
esp-alloc = { version = "0.9", features = ["defmt"] }
panic-rtt-target = { version = "0.2", features = ["defmt"] }
critical-section = "1.2"
embassy-executor = { version = "0.9", features = ["defmt"] }
embassy-time = { version = "0.5", features = ["defmt"] }
esp-rtos = { version = "0.2", features = ["defmt", "esp32c3", "embassy", "esp-radio"] }
static_cell = "2.1"
defmt-rtt = "1.0"
thiserror = { version = "2.0", default-features = false }
bitfield-struct = "0.12"
heapless = { version = "0.9", features = ["defmt"] }
embassy-sync = { version = "0.7", features = ["defmt"] }
rust-mqtt = { version = "0.4", features = ["defmt"] }
esp-radio = { version = "0.17", features = ["esp32c3", "wifi", "defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[lints.clippy]
cargo = "warn"
# Nothing we can do about it, just noise.
multiple_crate_versions = { level = "allow", priority = 10 }
